// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Note component renders the UI as expected when a match prop is passed 1`] = `
<Note
  match={
    Object {
      "params": Object {
        "noteId": "cbc787a0-ffaf-11e8-8eb2-f2801f1b9fd1",
      },
    }
  }
>
  <section
    className="notes"
  >
    <h2>
      Error
    </h2>
    <p>
      Could not load note.  Check your connection and reload the page.
    </p>
  </section>
</Note>
`;

exports[`Note component renders the UI as expected when no match prop is passed 1`] = `
<Note
  match={
    Object {
      "params": Object {
        "noteId": "",
      },
    }
  }
>
  <section
    className="notes"
  >
    <h2>
      Error
    </h2>
    <p>
      Could not load note.  Check your connection and reload the page.
    </p>
  </section>
</Note>
`;
